# software_engineering_for_data_science

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml  test.yml
src/: main.py  util.py
src/services/: api.py  database.py
tests/: test_main.py  test_services.py
